--- a/webstudy/workspace/javascript/WebContent/07_BOM/Ex03_window객체.html
+++ b/webstudy/workspace/javascript/WebContent/07_BOM/Ex03_window객체.html
@@ -29,25 +29,39 @@
 		popUp.moveBy(0, 20);  // x: 0, y: 20(아래로 20)
 	}
 	function moveCenter() {
+		// moveTo() : 스크린 기준으로 화면이 이동한다.
+		// alert('스크린 너비: ' + screen.availWidth);  // 1920
+		// alert('스크린 높이: ' + screen.availHeight);  // 1080
+		// 창의 너비 : 400
+		// 창의 높이 : 300
 		popUp.focus();
-		//alert('스크린 너비: ' + screen.availWidth);//1920    960
-		//alert('스크린 높이: ' + screen.availHeight);//1080  540
-		//창의 너비 400
-		//창의 높이 300
 		x = (screen.availWidth - 400) / 2;
 		y = (screen.availHeight - 300) / 2;
 		popUp.moveTo(x, y);
 	}
+
 	// resizeBy(x, y) : 현재 창의 크기를 기준으로 변경한다.
 	function sizeUp() {
 		var unit = 20;
+		popUp.focus();
 		popUp.resizeBy(unit, unit);
+		popUp.moveBy(-unit / 2, -unit / 2);
 	}
 	function sizeDown() {
-		var unit = -20;
-		popUp.resizeBy(unit, unit);
+		var unit = 20;
+		popUp.focus();
+		popUp.resizeBy(-unit, -unit);
+		popUp.moveBy(unit / 2, unit / 2);
 	}
-
+	
+	// resizeTo(width, height) : 절대 크기
+	function init() {
+		// popUp 의 open() 메소드 참고
+		popUp.focus();
+		popUp.moveTo(0, 300);  // top=300
+		popUp.resizeTo(400, 300);  // width=400, height=300
+	}
+	
 </script>
 </head>
 <body>
@@ -63,6 +77,8 @@
 		
 		<input type="button" value="크기 키우기" onclick="sizeUp()" />
 		<input type="button" value="크기 줄이기" onclick="sizeDown()" />
+		
+		<input type="button" value="창 원래대로" onclick="init()" />
 	</form>
 </body>
 </html>
