--- a/webstudy/workspace/javascript/WebContent/03_내장객체/Ex06_String.html
+++ b/webstudy/workspace/javascript/WebContent/03_내장객체/Ex06_String.html
@@ -9,7 +9,7 @@
 	var str= 'sqlsession';
 	
 	document.write('"sqlseesion".length='+str.length+'<br/>');
-	document.write('"sqlsession".charAt(0) = ' + str.charAt(0) + '<br/>');
+	document.write('"sqlsession".ccc= ' + str.charAt(0) + '<br/>');
 	document.write('"sqlsession".indexOf("s") = ' + str.indexOf('s') + '<br/>');  // 첫 번째 's'의 인덱스를 반환한다.
 	document.write('"sqlsession".indexOf("S") = ' + str.indexOf('S') + '<br/>');  // 대문자와 소문자 구분을 한다. 없으면 -1을 반환한다.
 	document.write('"sqlsession".lastIndexOf("s") = ' + str.lastIndexOf('s') + '<br/>');  // 마지막 's'의 인덱스를 반환한다.
